--- a/src/styles/scss/index.scss
+++ b/src/styles/scss/index.scss
@@ -15,14 +15,15 @@ html, body, #root, #app {
   width: 25vw;
   min-height: 100vh;
   background-color: grey;
-}
-.Nav ul {
-  list-style-type: none;
-}
-.Nav a {
-  color: white;
-  text-decoration: none;
-  width: 100%;
+
+  ul {
+    list-style-type: none;
+  }
+  a {
+    color: white;
+    text-decoration: none;
+    width: 100%;
+  }
 }
 #mobile-nav, #mobile-nav-items {
   display: none;
