--- a/src/styles/scss/_main.scss
+++ b/src/styles/scss/_main.scss
@@ -15,15 +15,14 @@ html, body, #root, #app {
   width: 25vw;
   min-height: 100vh;
   background-color: grey;
-
-  ul {
-    list-style-type: none;
-  }
-  a {
-    color: white;
-    text-decoration: none;
-    width: 100%;
-  }
+}
+.Nav ul {
+  list-style-type: none;
+}
+.Nav a {
+  color: white;
+  text-decoration: none;
+  width: 100%;
 }
 #mobile-nav, #mobile-nav-items {
   display: none;
