changed a list to divs, working on the single show page

--- a/src/styles/scss/_main.scss
+++ b/src/styles/scss/_main.scss
@@ -47,6 +47,7 @@ html, body, #root, .App {
   .Nav {
     min-height: 10vh;
     height: 10vh;
+    position: relative;
   }
   .Main {
     min-height: 90vh;
