--- a/src/styles/scss/_main.scss
+++ b/src/styles/scss/_main.scss
@@ -26,7 +26,7 @@ html, body, #root, .App {
   text-decoration: none;
   width: 100%;
 }
-#mobile-nav, #mobile-nav-items {
+#mobile-nav, #mobile-nav-items, #filters-box {
   display: none;
 }
 .listItem {
