beginning css refactor

--- a/src/styles/scss/_skeleton.scss
+++ b/src/styles/scss/_skeleton.scss
@@ -352,9 +352,9 @@ figure,
 table,
 p,
 ul,
-ol,
-form {
-  margin-bottom: 2.5rem; }
+ol
+//, form {
+  { margin-bottom: 2.5rem; }
 
 
 /* Utilities
