--- a/src/styles/scss/_main.scss
+++ b/src/styles/scss/_main.scss
@@ -1,18 +1,17 @@
 html, body, #root, .App {
   min-height: 100vh;
   width: 98vw;
+  margin: 0;
 }
-.Nav, .Main {
+
+.hide {
+  display: none;
+}
+
+.Nav {
   float: left;
   box-sizing: border-box;
   padding: 2em;
-}
-.Main {
-  width: 73vw;
-  min-height: 100vh;
-  margin-left: 25vw;
-}
-.Nav {
   width: 25vw;
   min-height: 100vh;
   background-color: grey;
@@ -27,6 +26,33 @@ html, body, #root, .App {
   }
 }
 
+.Main {
+  float: left;
+  box-sizing: border-box;
+  padding: 2em;
+  width: 73vw;
+  min-height: 100vh;
+  margin-left: 25vw;
+  .Home {
+    .searchInput.columns {
+      width: 30.6666666667%;
+      margin-right: 1em;
+      margin-left: 0;
+    }
+    .searchBtn.columns, .filterBtn.columns {
+      width: 13.3333333333%;
+      margin-right: 1em;
+      margin-left: 0;
+    }
+  }
+  .Show {
+
+  }
+  .Favourites {
+
+  }
+}
+
 #mobile-nav, #mobile-nav-items, #filters-box {
   display: none;
 }
@@ -38,26 +64,34 @@ html, body, #root, .App {
 }
 
 @media (max-width: 600px) and (orientation: portrait) {
-  html, body, #root, #app {
+  html, body, #root, .App {
     width: 100vw;
   }
-  .Nav, .Main {
+  .Nav {
     width: 100%;
     padding: 1em;
-  }
-  .Nav {
     min-height: 10vh;
     height: 10vh;
     position: relative;
   }
   .Main {
+    width: 100%;
+    padding: 1em;
     min-height: 90vh;
     clear: both;
     margin: 0;
-  }
-  #filter-time, #filter-name, #date-field {
-    margin-right: 0;
-    margin-left: 0 !important; 
+    .Home {
+      .searchInput.columns {
+        width: 100%;
+      }
+      .searchBtn.columns, .filterBtn.columns {
+        width: 47%;
+        margin-right: 0;
+      }
+      .filterBtn.columns {
+        float: right;
+      }
+    }
   }
   #desktop-nav {
     display: none;
@@ -66,9 +100,26 @@ html, body, #root, .App {
     display: block;
   }
 }
-@media (max-width: 600px) and (orientation: landscape) {
+
+@media (max-height: 500px) and (orientation: landscape) {
+  html, body, #root, .App {
+    width: 100vw;
+  }
   .Nav, .Main {
     padding: 1em;
+  }
+  .Main {
+    .Home {
+      .SearchBox {
+        .searchInput {
+          width: 100%;
+          margin-left: 0;
+        }
+        .searchBtn, .filterBtn {
+          width: 47%;
+        }
+      }
+    }
   }
 
   #mobile-nav-items {
